almost everything is done, minor changes left to end

--- a/#source/communication.html
+++ b/#source/communication.html
@@ -22,8 +22,10 @@
                     </div>
                     <div class="check">
                         <input type="checkbox" id="communication__checkbox"> 
-                        <label for="communication__checkbox"><p>I agree to receive communications 
-                            from Createx Construction Bureau.</p></label>
+                        <label for="communication__checkbox">
+                            I agree to receive communications 
+                            from Createx Construction Bureau.
+                        </label>
                     </div>
                 </form>
                 <button class="orange__button">SEND REQUEST</button>
