--- a/#source/footer.html
+++ b/#source/footer.html
@@ -71,8 +71,8 @@
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
                         <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
-                        <li><a href="#"><span class="opacity__text">Available Positions</span></a></li>
-                        <li><a href="#"><span class="opacity__text">Contacts</span></a></li>
+                        <li><a href="/positions.html"><span class="opacity__text">Available Positions</span></a></li>
+                        <li><a href="/contacts.html"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
                 </div>
                 <div class="info__box">
@@ -80,7 +80,7 @@
                     <ul class="info__list">
                         <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
                         <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
-                        <li><a href="#"><span class="opacity__text">News</span></a></li>
+                        <li><a href="/news.html"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
             </div>
