--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <li><a href="/about.html">About us</a></li>
                     <li><a href="/services.html">Services</a></li>
                     <li><a href="/work.html">Work</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="/news.html">News</a></li>
+                    <li><a href="/contacts.html">Contacts</a></li>
                 </ul>
                 <div class="contacts">
                     <div class="contacts__item">
@@ -62,7 +62,7 @@
                         </p>
                     </div>
                     <div class="construction__buttons">
-                        <button type="button" class="transparent__button">LEARN MORE ABOUT US</button>
+                        <button type="button" class="transparent__button"><a href="/about.html">LEARN MORE ABOUT US</a></button>
                         <button type="button" class="orange__button">SUBMIT REQUEST</button>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                         </p>
                     </div>
                     <div class="bureau__video">
-                        <a href="#">
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
                             <img src="../img/main/large.svg" alt="play image">
                         </a>
                         <div class="bureau__circle">
@@ -180,7 +180,7 @@
                     </div>
                     <div class="services__view">
                         <h3>Learn more about our services</h3>
-                        <button class="orange__button">VIEW SERVICES</button>
+                        <button class="orange__button"><a href="/services.html">VIEW SERVICES</a></button>
                     </div>
                 </div>
             </div>
@@ -206,27 +206,27 @@
                             <div class="item__box">
                                 <h4 class="item__title">Red Finger Building</h4>
                                 <p class="item__text">Business Centers</p>
-                                <button class="orange__button">VIEW PROJECT</button>
+                                <button class="orange__button"><a href="/cottage.html">VIEW PROJECT</a></button>
                             </div>
                         </div>
                         <div class="projects__item-2 active">
                             <div class="item__box">
                                 <h4 class="item__title">Cubes Building</h4>
                                 <p class="item__text">Business Centers</p>
-                                <button class="orange__button">VIEW PROJECT</button>
+                                <button class="orange__button"><a href="/cottage.html">VIEW PROJECT</a></button>
                             </div>
                         </div>
                         <div class="projects__item-3">
                             <div class="item__box">
                                 <h4 class="item__title">The Pencil Building</h4>
                                 <p class="item__text">Stores & Malls</p>
-                                <button class="orange__button">VIEW PROJECT</button>
+                                <button class="orange__button"><a href="/cottage.html">VIEW PROJECT</a></button>
                             </div>
                         </div>
                     </div>
                     <div class="projects__view">
                         <h3 class="view__title">Explore all our works</h3>
-                        <button class="orange__button">VIEW PORTFOLIO</button>
+                        <button class="orange__button"><a href="/work.html">VIEW PROJECTS</a></button>
                     </div>
                 </div>
             </div>
@@ -381,8 +381,10 @@
                     </div>
                     <div class="check">
                         <input type="checkbox" id="communication__checkbox"> 
-                        <label for="communication__checkbox"><p>I agree to receive communications 
-                            from Createx Construction Bureau.</p></label>
+                        <label for="communication__checkbox">
+                            I agree to receive communications 
+                            from Createx Construction Bureau.
+                        </label>
                     </div>
                 </form>
                 <button class="orange__button">SEND REQUEST</button>
@@ -465,8 +467,8 @@
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
                         <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
-                        <li><a href="#"><span class="opacity__text">Available Positions</span></a></li>
-                        <li><a href="#"><span class="opacity__text">Contacts</span></a></li>
+                        <li><a href="/positions.html"><span class="opacity__text">Available Positions</span></a></li>
+                        <li><a href="/contacts.html"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
                 </div>
                 <div class="info__box">
@@ -474,7 +476,7 @@
                     <ul class="info__list">
                         <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
                         <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
-                        <li><a href="#"><span class="opacity__text">News</span></a></li>
+                        <li><a href="/news.html"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
             </div>
