--- a/services.html
+++ b/services.html
@@ -26,8 +26,8 @@
                     <li><a href="/about.html">About us</a></li>
                     <li><a href="/services.html">Services</a></li>
                     <li><a href="/work.html">Work</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="/news.html">News</a></li>
+                    <li><a href="/contacts.html">Contacts</a></li>
                 </ul>
                 <div class="contacts">
                     <div class="contacts__item">
@@ -144,8 +144,10 @@
                     </div>
                     <div class="check">
                         <input type="checkbox" id="communication__checkbox"> 
-                        <label for="communication__checkbox"><p>I agree to receive communications 
-                            from Createx Construction Bureau.</p></label>
+                        <label for="communication__checkbox">
+                            I agree to receive communications 
+                            from Createx Construction Bureau.
+                        </label>
                     </div>
                 </form>
                 <button class="orange__button">SEND REQUEST</button>
@@ -228,8 +230,8 @@
                     <h5 class="info__title">WHO WE ARE</h5>
                     <ul class="info__list">
                         <li><a href="/about.html"><span class="opacity__text">About Us</span></a></li>
-                        <li><a href="#"><span class="opacity__text">Available Positions</span></a></li>
-                        <li><a href="#"><span class="opacity__text">Contacts</span></a></li>
+                        <li><a href="/positions.html"><span class="opacity__text">Available Positions</span></a></li>
+                        <li><a href="/contacts.html"><span class="opacity__text">Contacts</span></a></li>
                     </ul>
                 </div>
                 <div class="info__box">
@@ -237,7 +239,7 @@
                     <ul class="info__list">
                         <li><a href="/services.html"><span class="opacity__text">Services</span></a></li>
                         <li><a href="/work.html"><span class="opacity__text">Work</span></a></li>
-                        <li><a href="#"><span class="opacity__text">News</span></a></li>
+                        <li><a href="/news.html"><span class="opacity__text">News</span></a></li>
                     </ul>
                 </div>
             </div>
