--- a/news.html
+++ b/news.html
@@ -6,15 +6,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css//work.css">
+    <link rel="stylesheet" href="/css/news.css">
     <title>Main page</title>
 </head>
 <body>
 
     <main>
-
         <section class="description__section">
-            
+
 <header class="header">
     <div class="container">
         <div class="header__box">
@@ -52,153 +51,173 @@
 
 
             <div class="container">
-                <div class="description__box">
-                    <h5 class="description__path">Homepage <span>/ Work</span></h5>
-                    <h1 class="description__title">OUR WORK</h1>
-                    <p class="description__text">Our portfolio represents 20 years of construction experience 
-                        backed by a passion for perfect client service, 
-                        quality and innovations in consctuction industry.
-                    </p>
-                </div>
-                <div class="description__cards">
-                    <div class="description__item active">
-                        <img src="../img/work/ic-house.svg" alt="house image">
-                        <p>All Projects</p>
-                    </div>
-                    <div class="description__item">
-                        <img src="../img/work/ic-construction.png" alt="house image">
-                        <p>Construction</p>
-                    </div>
-                    <div class="description__item">
-                        <img src="../img/work/ic-plan.png" alt="house image">
-                        <p>Project Development</p>
-                    </div>
-                    <div class="description__item">
-                        <img src="../img/work/ic-pantone.png" alt="house image">
-                        <p>Interior Design</p>
-                    </div>
-                    <div class="description__item">
-                        <img src="../img/work/ic-painting.png" alt="house image">
-                        <p>Repairs</p>
-                    </div>
+                <div class="description__area">
+                    <h5 class="description__path">Homepage <span>/ News</span></h5>
+                    <h1 class="description__title">NEWS</h1>
+                    <p class="description__text">Stay tuned with our news, expert tips and articles.</p>
                 </div>
             </div>
         </section>
-        <section class="related__section">
+
+        <section class="categories__section">
             <div class="container">
-                <div class="projects">
-                    <div class="projects__cards">
-                        <div class="projects__item-1">
-                            <div class="item__box">
-                                <h4 class="item__title">Cubes Building</h4>
-                                <p class="item__text">Business Centers</p>
-                                <button class="orange__button">VIEW PROJECT</button>
+                <h2 class="categories__title">Categories</h2>
+                <ul class="categories__list">
+                    <li><button class="transparent__button active">All News</button></li>
+                    <li><button class="transparent__button">Company News</button></li>
+                    <li><button class="transparent__button">Innovation</button></li>
+                    <li><button class="transparent__button">Industry News</button></li>
+                    <li><button class="transparent__button">Expert Tips</button></li>
+                    <li><button class="transparent__button">Marketing</button></li>
+                </ul>
+                <div class="categories__cards">
+                    <div class="categories__item">
+                        <img src="../img/news/image(5).png" alt="card image">
+                        <div class="item__box">
+                            <h5 class="item__title">
+                                <a href="/infrastructure.html">How to Build Climate Change-Resilient Infrastructure</a>
+                            </h5>
+                            <div class="item__info">
+                                <p class="item__text">Industry News</p>
+                                <hr>
+                                <p class="item__text">June 24, 2020</p>
+                                <hr>
+                                <div class="item__social">
+                                    <img src="../img/main/Chat.svg" alt="chat img">
+                                    <p class="item__text">4 comments</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="projects__item-2">
-                            <div class="item__box">
-                                <h4 class="item__title">Modern Cottage</h4>
-                                <p class="item__text">Private houses</p>
-                                <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
-                            </div>
-                        </div>
-                        <div class="projects__item-3">
-                            <div class="item__box">
-                                <h4 class="item__title">Luxury Beach House</h4>
-                                <p class="item__text">Private houses</p>
-                                <button class="orange__button">VIEW PROJECT</button>
-                            </div>
-                        </div>
-                        <div class="projects__item-4">
-                            <div class="item__box">
-                                <h4 class="item__title">Modern Double Bedroom</h4>
-                                <p class="item__text">Apartments & flats</p>
-                                <button class="orange__button">VIEW PROJECT</button>
-                            </div>
-                        </div>
-                        <div class="projects__item-5">
-                            <div class="item__box">
-                                <h4 class="item__title">Kids Bedroom With Decorations</h4>
-                                <p class="item__text">Apartments & flats</p>
-                                <button class="orange__button">VIEW PROJECT</button>
-                            </div>
-                        </div>
-                        <div class="projects__item-6">
-                            <div class="item__box">
-                                <h4 class="item__title">The Pencil Building</h4>
-                                <p class="item__text">Stores & Malls</p>
-                                <button class="orange__button">VIEW PROJECT</button>
-                            </div>
-                        </div>
-                        <div class="projects__item-7">
-                            <div class="item__box">
-                                <h4 class="item__title">Red Finger Building</h4>
-                                <p class="item__text">Business Centers</p>
-                                <button class="orange__button">VIEW PROJECT</button>
-                            </div>
-                        </div>
-                        <div class="projects__item-8">
-                            <div class="item__box">
-                                <h4 class="item__title">Scandinavian Style Interior</h4>
-                                <p class="item__text">Private houses</p>
-                                <button class="orange__button">VIEW PROJECT</button>
-                            </div>
-                        </div>
-                        <div class="projects__item-9">
-                            <div class="item__box">
-                                <h4 class="item__title">Brown and Gray Painted House</h4>
-                                <p class="item__text">Private houses</p>
-                                <button class="orange__button">VIEW PROJECT</button>
-                            </div>
+                            <p class="item__description">
+                                Ipsum aliquet nisi, hendrerit rhoncus quam tortor, maecenas faucibus. 
+                                Tincidunt aliquet sit vel, venenatis nulla. Integer bibendum turpis convallis...
+                            </p>
                         </div>
                     </div>
-                    <div class="projects__load">
-                        <button class="projects__view">
-                            <img src="../img/work/Convert.svg" alt="">
-                            <p class="projects__text">Load more</p>
-                        </button>
+                    
+                    <div class="categories__item">
+                        <img src="../img/news/image.png" alt="card image">
+                        <div class="item__box">
+                            <h5 class="item__title">
+                                <a href="/infrastructure.html">How Construction Can Help Itself</a>
+                            </h5>
+                            <div class="item__info">
+                                <p class="item__text">Innovation</p>
+                                <hr>
+                                <p class="item__text">June 12, 2020</p>
+                                <hr>
+                                <div class="item__social">
+                                    <img src="../img/main/Chat.svg" alt="chat img">
+                                    <p class="item__text">No comments</p>
+                                </div>
+                            </div>
+                            <p class="item__description">
+                                Porta habitant vitae quam interdum. 
+                                Leo viverra non volutpat rhoncus placerat vitae scelerisque. 
+                                Rhoncus augue faucibus maecenas lacus...
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="categories__item">
+                        <img src="../img/news/image(1).png" alt="card image">
+                        <div class="item__box">
+                            <h5 class="item__title">
+                                <a href="/infrastructure.html">The Difference Between a Digger and an Excavator</a>
+                            </h5>
+                            <div class="item__info">
+                                <p class="item__text">Expert Tips</p>
+                                <hr>
+                                <p class="item__text">May 16, 2020</p>
+                                <hr>
+                                <div class="item__social">
+                                    <img src="../img/main/Chat.svg" alt="chat img">
+                                    <p class="item__text">No comments</p>
+                                </div>
+                            </div>
+                            <p class="item__description">
+                                Cras est nisi purus velit facilisi vitae, dolor. 
+                                Lorem scelerisque integer duis et nulla lobortis cursus. 
+                                Viverra erat sollicitudin praesent viverra...
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="categories__item">
+                        <img src="../img/news/image(2).png" alt="card image">
+                        <div class="item__box">
+                            <h5 class="item__title">
+                                <a href="/infrastructure.html">Building Construction Hand Tools</a>
+                            </h5>
+                            <div class="item__info">
+                                <p class="item__text">Expert Tips</p>
+                                <hr>
+                                <p class="item__text">February 25, 2020</p>
+                                <hr>
+                                <div class="item__social">
+                                    <img src="../img/main/Chat.svg" alt="chat img">
+                                    <p class="item__text">1 comment</p>
+                                </div>
+                            </div>
+                            <p class="item__description">
+                                Tellus quis aliquet volutpat nunc pulvinar donec sed sapien. Vitae elit id dolor,
+                                 tristique massa. Fames lobortis orci rutrum bibendum integer...
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="categories__item">
+                        <img src="../img/news/image(3).png" alt="card image">
+                        <div class="item__box">
+                            <h5 class="item__title">
+                                <a href="/infrastructure.html">Top 10 Construction Trends</a>
+                            </h5>
+                            <div class="item__info">
+                                <p class="item__text">Industry News</p>
+                                <hr>
+                                <p class="item__text">January 14, 2020</p>
+                                <hr>
+                                <div class="item__social">
+                                    <img src="../img/main/Chat.svg" alt="chat img">
+                                    <p class="item__text">No comments</p>
+                                </div>
+                            </div>
+                            <p class="item__description">
+                                Dignissim sed enim, eleifend morbi condimentum. Congue id quis vulputate dignissim eget. 
+                                Ac ullamcorper nunc habitasse enim interdum platea...
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="categories__item">
+                        <img src="../img/news/image(4).png" alt="card image">
+                        <div class="item__box">
+                            <h5 class="item__title">
+                                <a href="/infrastructure.html">Types of Flooring Materials</a>
+                            </h5>
+                            <div class="item__info">
+                                <p class="item__text">Company News</p>
+                                <hr>
+                                <p class="item__text">December 1, 2019</p>
+                                <hr>
+                                <div class="item__social">
+                                    <img src="../img/main/Chat.svg" alt="chat img">
+                                    <p class="item__text">No comments</p>
+                                </div>
+                            </div>
+                            <p class="item__description">
+                                Maecenas donec lacinia nunc, quam sit magnis mauris. 
+                                Neque bibendum et mauris, aenean. Vel arcu amet in sem parturient  integer duis et nulla...
+                            </p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <section class="supported__section">
-            <div class="container">
-                <div class="supported__box">
-<div class="supported__content">
-    <div class="supported__block">
-        <h2 class="supported__title">What our clients are saying</h2>
-        <img src="../img/main/profile-image.png" alt="profile photo">
-        <p class="supported__description">Ipsum aute sunt aliquip aute et occaecat. 
-            Anim minim do cillum eiusmod enim. Consectetur magna cillum consequat minim  
-            laboris cillum laboris voluptate minim proident exercitation ullamco. 
-        </p>
-        <div class="supported__switch">
-            <div class="supported__name">
-                <h5>Shawn Edwards</h5>
-                <p>Position, Company name</p>
-            </div>
-            <div class="supported__arrows">
-                <img src="../img/main/prev-btn.png" alt="left arrow">
-                <img src="../img/main/hover.png" alt="right arrow">
-            </div>
-        </div>
-    </div>
-    <img class="shift__img" src="../img/main/builders.jpg" alt="builders image">
-</div>                </div>
-            </div>
-        </section>
-        <section class="companies__section">
-            <div class="container">
-                <div class="companies__box">
-<h2 class="supported__title">Supported by 12+ partners</h2>
-<ul class="supported__list">
-    <li><a href="#"><img src="../img/main/client-logo.png" alt="InDepth logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo1.png" alt="Hidher fit logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo2.png" alt="Sentinal consulting logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo3.png" alt="happy home logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo4.png" alt="forsale logo"></a></li>
-    <li><a href="#"><img src="../img/main/client-logo5.png" alt="Sunset reality logo"></a></li>
-</ul>                </div>
+                <ul class="pages__list">
+                    <li class="active">1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li><img src="/img/news/Right.svg" alt=""></li>
+                </ul>
             </div>
         </section>
 
