--- a/services.html
+++ b/services.html
@@ -75,7 +75,9 @@
                                 Mattis habitant venenatis, gravida posuere massa ac interdum. 
                                 Eget aliquam dignissim ut vestibulum. 
                             </p>
-                            <button class="orange__button">LEARN MORE</button>
+                            <a href="/interior__design.html">
+                                <button class="orange__button">LEARN MORE</button>
+                            </a>
                         </div>
                     </div>
                     <div class="examples__item">
@@ -86,7 +88,9 @@
                                 Est nulla lectus purus tincidunt massa tortor. 
                                 Hendrerit vulputate elementum blandit massa vitae amet felis eget. 
                             </p>
-                            <button class="orange__button">LEARN MORE</button>
+                            <a href="/interior__design.html">
+                                <button class="orange__button">LEARN MORE</button>
+                            </a>
                         </div>
                         <img src="../img/services/image (1).jpg" alt="development image">
                     </div>
@@ -112,7 +116,9 @@
                                 Ac facilisi dictum commodo, tortor gravida pretium, orci. 
                                 Nunc sit sollicitudin id egestas mattis. Turpis viverra nec urna ultrices urna. 
                             </p>
-                            <button class="orange__button">LEARN MORE</button>
+                            <a href="/interior__design.html">
+                                <button class="orange__button">LEARN MORE</button>
+                            </a>
                         </div>
                         <img src="../img/services/image (3).jpg" alt="repairs image">
                     </div>
