--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/projects_slider.js" defer></script>
     <title>Main page</title>
 </head>
 <body>
@@ -193,41 +194,112 @@
                             and learn more about our work
                         </h2>
                         <div class="arrow__box">
-                            <div class="arrow__left">
+                            <div class="arrow__left" id="projects__left-arrow">
                                 <img src="../img/main/Line(Stroke).png" alt="line left">
                             </div>
-                            <div class="arrow__right active">
+                            <div class="arrow__right active" id="projects__right-arrow">
                                 <img src="../img/main/Line(right).png" alt="line right">
                             </div>
                         </div>
                     </div>
-                    <div class="projects__cards">
-                        <div class="projects__item-1">
-                            <div class="item__box">
-                                <h4 class="item__title">Red Finger Building</h4>
-                                <p class="item__text">Business Centers</p>
-                                <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
-                            </div>
-                        </div>
-                        <div class="projects__item-2 active">
-                            <div class="item__box">
-                                <h4 class="item__title">Cubes Building</h4>
-                                <p class="item__text">Business Centers</p>
-                                <a href="/cottage.html">
-                                    <button class="orange__button">VIEW PROJECT</button>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="projects__item-3">
-                            <div class="item__box">
-                                <h4 class="item__title">The Pencil Building</h4>
-                                <p class="item__text">Stores & Malls</p>
-                                <a href="/cottage.html">
-                                    <button class="orange__button">VIEW PROJECT</button>
-                                </a>
-                            </div>
-                        </div>
+
+<div class="projects__slider">
+    <div class="projects__slides">
+        <input type="radio" name="projects_r" id="projects_r1" checked>
+        <input type="radio" name="projects_r" id="projects_r2" >
+        <input type="radio" name="projects_r" id="projects_r3" >
+
+        <div class="projects__slide projects__s1">
+            <div class="projects__cards">
+                <div class="projects__item-1">
+                    <div class="item__box">
+                        <h4 class="item__title">Red Finger Building</h4>
+                        <p class="item__text">Business Centers</p>
+                        <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
                     </div>
+                </div>
+                <div class="projects__item-2">
+                    <div class="item__box">
+                        <h4 class="item__title">Cubes Building</h4>
+                        <p class="item__text">Business Centers</p>
+                        <a href="/cottage.html">
+                            <button class="orange__button">VIEW PROJECT</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="projects__item-3">
+                    <div class="item__box">
+                        <h4 class="item__title">The Pencil Building</h4>
+                        <p class="item__text">Stores & Malls</p>
+                        <a href="/cottage.html">
+                            <button class="orange__button">VIEW PROJECT</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="projects__slide">
+            <div class="projects__cards">
+                <div class="projects__item-4">
+                    <div class="item__box">
+                        <h4 class="item__title">Modern Cottage</h4>
+                        <p class="item__text">Private houses</p>
+                        <a href="/cottage.html"><button class="orange__button">VIEW PROJECT</button></a>
+                    </div>
+                </div>
+                <div class="projects__item-5">
+                    <div class="item__box">
+                        <h4 class="item__title">Luxury Beach House</h4>
+                        <p class="item__text">Private houses</p>
+                        <a href="/cottage.html">
+                            <button class="orange__button">VIEW PROJECT</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="projects__item-6">
+                    <div class="item__box">
+                        <h4 class="item__title">Modern Double Bedroom</h4>
+                        <p class="item__text">Apartments & flats</p>
+                        <a href="/cottage.html">
+                            <button class="orange__button">VIEW PROJECT</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="projects__slide">
+            <div class="projects__cards">
+                <div class="projects__item-7">
+                    <div class="item__box">
+                        <h4 class="item__title">Kids Bedroom With Decorations</h4>
+                        <p class="item__text">Apartments & flats</p>
+                        <a href="/cottage.html">
+                            <button class="orange__button">VIEW PROJECT</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="projects__item-8">
+                    <div class="item__box">
+                        <h4 class="item__title">Scandinavian Style Interior</h4>
+                        <p class="item__text">Private houses</p>
+                        <a href="/cottage.html">
+                            <button class="orange__button">VIEW PROJECT</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="projects__item-9">
+                    <div class="item__box">
+                        <h4 class="item__title">Brown and Gray Painted House</h4>
+                        <p class="item__text">Private houses</p>
+                        <a href="/cottage.html">
+                            <button class="orange__button">VIEW PROJECT</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
                     <div class="projects__view">
                         <h3 class="view__title">Explore all our works</h3>
                         <button class="orange__button"><a href="/work.html">VIEW PROJECTS</a></button>
